- Working beta version of order display frontend.

--- a/web/angular/MyOrders.html
+++ b/web/angular/MyOrders.html
@@ -1,4 +1,10 @@
-<div>
+<div ng-controller="Order as O">
 
+    <ul>
+        <li ng-repeat="order in O.orders">
+           {{ order.placingDate }}&emsp;{{ order.state }}
+        </li>
+
+    </ul>
 
 </div>
