--- a/web/angular/MyOrders.html
+++ b/web/angular/MyOrders.html
@@ -1,10 +1,23 @@
 <div ng-controller="Order as O">
+    <div class="container">
+        <div class="row" style="margin-bottom: 3vh; text-align: center;" >
+            <div class="col-md-2"> Order number </div>
+            <div class="col-md-2"> State </div>
+            <div class="col-md-2"> Placing Date </div>
+            <div class="col-md-2"> Completion Date </div>
+            <div class="col-md-2"> Value </div>
+        </div>
 
-    <ul>
-        <li ng-repeat="order in O.orders">
-           {{ order.placingDate }}&emsp;{{ order.state }}
-        </li>
 
-    </ul>
+        <div class="row" ng-repeat="order in O.orders" style="text-align: center;">
+            <div class="col-md-2"> {{ order.id }} </div>
+            <div class="col-md-2"> {{ order.state }} </div>
+            <div class="col-md-2"> {{ order.placingDate }} </div>
+            <div class="col-md-2"> {{ order.completionDate }} </div>
+            <div class="col-md-2"> {{ order.value }} PLN </div>
+        </div>
+
+    </div>
+
 
 </div>
