--- a/web/angular/MyOrders.html
+++ b/web/angular/MyOrders.html
@@ -34,8 +34,8 @@
                         <div class="col-md-2"> {{ product.amount }} </div>
                         <div class="col-md-2"> {{ product.price }} PLN </div>
                         <div class="col-md-2"> {{ product.price/product.amount }} PLN </div>
-                        <div class="col-md-1" ng-if="product.reviewed"> edit review </div>
-                        <div class="col-md-1" ng-if="!product.reviewed"> add review </div>
+                        <div class="col-md-1" ng-if="product.reviewed"><a href="" ng-click="O.editReview(product)">edit review</a> </div>
+                        <div class="col-md-1" ng-if="!product.reviewed"><a href="" ng-click="O.addReview(product)">add review</a> </div>
                     </div>
 
                 </div>
