- Mapping fix for User and Opinion inconsistency. Fixed bug with disappearing products. Fixed glitch with adding empty reviews.

--- a/web/angular/IndexPage.html
+++ b/web/angular/IndexPage.html
@@ -21,13 +21,13 @@
 
         </table>
         <div class="myProduct" ng-if="C.product != null">
-            Name: {{ C.product[0].nazwa }}<br>
-            Price: {{ C.product[0].cena }} <br><br>
-            <img ng-src = "/products/images/{{ C.product[0].picture_path }}"/><br><br>
-            Availability: {{ C.product[0].dostepnosc }} <br>
-            Description: {{ C.product[0].opis }} <br>
+            Name: {{ C.product.nazwa }}<br>
+            Price: {{ C.product.cena }} <br><br>
+            <img ng-src = "/products/images/{{ C.product.picture_path }}"/><br><br>
+            Availability: {{ C.product.dostepnosc }} <br>
+            Description: {{ C.product.opis }} <br>
             <div class="btn-group-vertical" ng-if="C.user != null">
-                <a href="#/placeOrder" class="btn btn-default" ng-click="setProduct(C.product[0])">add To Basket</a>
+                <a href="#/placeOrder" class="btn btn-default" ng-click="setProduct(C.product)">add To Basket</a>
             </div>
             <br/>
 
